apps/gitea/010-deployment.yaml
###################################################
# Namespace Gitea
###################################################
apiVersion: v1
kind: Namespace
metadata:
  name: gitea

###############################
# Deplyoment Gitea
###############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.20.3
          ports:
            - containerPort: 3000
              name: gitea
            - containerPort: 2222
              name: git-ssh
          volumeMounts:
          - mountPath: /data
            name: git-data

        - name: postgres
          image: docker.io/library/postgres:15
          volumeMounts:
          - mountPath: /data
            name: git-data

        - name: redis
          image: docker.io/library/redis:latest
          ports:
          - containerPort: 6379
          volumeMounts:
          - mountPath: /data
            name: git-data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: git-data
          persistentVolumeClaim:
            claimName: git-pvc
