apps/gitea/030-network.yaml
###############################
# Service
###############################
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
  namespace: gitea
spec:
  ports:
    - name: gitea-http
      port: 3000
    - name: gitea-ssh
      port: 2222
  selector:
    app: gitea

---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - git.tnils.eu
    secretName: tls-gitea
  rules:
  - host: git.tnils.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              name: gitea-http
      - path: /ssh
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              name: gitea-ssh
